@startuml
title Diagramme des Classes - Basé sur le Cas d'Utilisation

abstract class Persone {
  - id: int
  - nom: String
  - email: String
}

class Formateur {
  - metiers: String
}

class Stagiaire {
  - groupe: String
}

class Absence {
  - id: int
  - date: Date
  - statut: String
  + justifierAbsence(): void
}

class Rapport {
  - contenu: String
  - dateCreation: Date
  + afficher(): String
  + generer(): void
}

Persone <|-- Formateur
Persone <|-- Stagiaire

Formateur "1" -- "0..*" Absence : "Supervise"
Stagiaire "1" -- "0..*" Absence : "Manque"
Formateur "1" -- "0..*" Rapport : "Génère"

@enduml
